RESOLVED FIXED159964
iOS: Cannot paste images in RTF content
https://bugs.webkit.org/show_bug.cgi?id=159964
Summary iOS: Cannot paste images in RTF content
Ryosuke Niwa
Reported 2016-07-19 23:03:36 PDT
On iOS, images inside RTF contents are stripped because calls to setDefersLoading in Editor::createFragmentAndAddResources is not working.
Attachments
Fixes the bug (2.41 KB, patch)
2016-07-19 23:11 PDT, Ryosuke Niwa
no flags
Reserve the original value of imagesEnabled (3.03 KB, patch)
2016-07-20 15:50 PDT, Ryosuke Niwa
enrica: review+
Ryosuke Niwa
Comment 1 2016-07-19 23:04:15 PDT
Ryosuke Niwa
Comment 2 2016-07-19 23:08:51 PDT
Ryosuke Niwa
Comment 3 2016-07-19 23:11:59 PDT
Created attachment 284086 [details] Fixes the bug
Ryosuke Niwa
Comment 4 2016-07-20 15:50:46 PDT
Created attachment 284159 [details] Reserve the original value of imagesEnabled
Enrica Casucci
Comment 5 2016-07-20 16:51:33 PDT
Comment on attachment 284159 [details] Reserve the original value of imagesEnabled Looks good.
Ryosuke Niwa
Comment 6 2016-07-20 17:24:16 PDT
Ryosuke Niwa
Comment 7 2016-07-22 23:09:35 PDT
Comment on attachment 284159 [details] Reserve the original value of imagesEnabled Oops, this patch has already been landed.
Darin Adler
Comment 8 2016-07-22 23:12:55 PDT
Sorry, my mistake.
Note You need to log in before you can comment on or make changes to this bug.