iOS: Cannot paste images in RTF content https://bugs.webkit.org/show_bug.cgi?id=159964 <rdar://problem/27442806>

Reviewed by Enrica Casucci.

The bug was caused by setDefersLoading(true) not deferring image loading for the parsed fragment.
Worked around this bug by disabling image loading while parsing the document fragment.

* editing/ios/EditorIOS.mm:
(WebCore::Editor::createFragmentAndAddResources):


Canonical link: https://commits.webkit.org/178159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203482 268f45cc-cd09-0410-ab3c-d52691b4dbfc